--- a/index.HTML
+++ b/index.HTML
@@ -34,3 +34,8 @@
     <script src="script.js"></script>
 </body>
 </html>
+<input type="checkbox" id="fire-trigger">
+
+<label for="fire-trigger" class="eld-knapp">ELD!</label>
+
+<div class="fire-overlay"></div>
