--- a/index.html
+++ b/index.html
@@ -39,3 +39,6 @@
 <label for="fire-trigger" class="eld-knapp">ELD!</label>
 
 <div class="fire-overlay"></div>
+<input type="checkbox" id="fire-trigger">
+<label for="fire-trigger" class="eld-knapp">ELD!</label>
+<div class="fire-overlay"></div>
