--- a/index.html
+++ b/index.html
@@ -42,3 +42,13 @@
 <input type="checkbox" id="fire-trigger">
 <label for="fire-trigger" class="eld-knapp">ELD!</label>
 <div class="fire-overlay"></div>
+<input type="checkbox" id="fire-trigger">
+<label for="fire-trigger" class="eld-knapp">ELD!</label>
+
+<div class="fire-container">
+    <div class="flame"></div>
+    <div class="flame"></div>
+    <div class="flame"></div>
+    <div class="flame"></div>
+    <div class="flame"></div>
+</div>
