--- a/index.html
+++ b/index.html
@@ -1,11 +1,41 @@
 <!doctype html>
-<html lang="sv"><meta charset="utf-8">
-<title>Sidan finns inte (404)</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>html,body{height:100%;margin:0}body{display:grid;place-items:center;font-family:system-ui}main{text-align:center;padding:2rem}</style>
-<main>
-  <h1>404 – Hittade inte sidan</h1>
-  <p>Gå till <a href="/">startsidan</a>.</p>
-</main>
+<html lang="sv">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Det funkar!</title>
+  <style>
+    body {
+      font-family: system-ui, Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background: #f0f0f0;
+    }
+    div {
+      background: white;
+      padding: 40px 60px;
+      border-radius: 12px;
+      box-shadow: 0 10px 30px rgba(0,0,0,.15);
+      text-align: center;
+    }
+    h1 {
+      margin: 0 0 20px;
+      font-size: 2.5rem;
+      color: #333;
+    }
+    p {
+      font-size: 1.2rem;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+  <div>
+    <h1>Det funkar! 🎉</h1>
+    <p>Din GitHub Pages‑sida är nu igång.</p>
+  </div>
+</body>
 </html>
-``
